# codspeed-aoc

./: Cargo.toml  day17lut  day21p1lut
benches/: day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day25.rs
src/: day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day24.rs  day25.rs  lib.rs  main.rs
