[package]
name = "codspeed-aoc"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

[[bench]]
name = "day17"
harness = false

[[bench]]
name = "day18"
harness = false

[[bench]]
name = "day19"
harness = false

[[bench]]
name = "day20"
harness = false

[[bench]]
name = "day21"
harness = false
